--- a/sections/6_evaluation.tex
+++ b/sections/6_evaluation.tex
@@ -37,6 +37,7 @@ outcomes of all these evaluations will be collectively discussed in Section
 % number and latency between invocation and result is to measured.
 
 \subsubsection{Experiment Setup}
+\label{subsubsec:evaluation:fusionize_and_sand:experiment_setup}
 
 For \textsc{Fusionize} and SAND, we have constructed a benchmark with the
 intention of isolating networking overhead. This is designed to simulate scenarios
@@ -78,6 +79,7 @@ and result must then be measured.
 \end{figure}
 
 \subsubsection{Results}
+\label{subsubsec:evaluation:fusionize_and_sand:results}
 
 \begin{figure}
     \centering
