--- a/sections/7_discussion.tex
+++ b/sections/7_discussion.tex
@@ -13,6 +13,7 @@ project. Lastly, we discuss the three subprojects in more detail.
 \subsection{Interpretation of Experiment Results}
 
 \subsubsection{Fusionize and SAND}
+\label{subsubsec:discussion:interpretation_of_experiment_results:fusionize_and_sand}
 
 There are different possible explanations for the large differences between
 SAND, Fusionize, and vanilla Nuclio that we observed in our experiment. To
