finished intro with lookout

--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -172,10 +172,22 @@ platform\footnote{\url{https://nuclio.io/}}.
 
 Within the scope of this project, we aim to follow the prototype set by
 \textsc{ProFaaStinate}. Our goal is to implement the concepts from the three
-approaches within Nuclio as a means to expose potential avenues for optimization
-from the provider's perspective in serverless platforms. We aspire to design a
-system capable of overcoming these common challenges often encountered in FaaS
-platforms as a whole. Through our initiative, we hope to encourage further
-research and provider-side implementations in this field.
+approaches within Nuclio as a means to expose potential opportunities for
+optimization from the provider's perspective in serverless platforms. We aspire
+to design a system capable of overcoming these common challenges often
+encountered in FaaS platforms as a whole. Through our initiative, we hope to
+encourage further research and provider-side implementations in this field.
 
+The remainder of this report is is organized as follows: first, we inform about
+the most important principles of the open-source serverless platform Nuclio in
+Section \ref{sec:nuclio}, as we will reference its architecture and individual
+components in our implementations. Sections \ref{sec:fusionize},
+\ref{sec:profaastinate} and \ref{sec:sand} then go into detail about our
+individual implementations of the three papers' approaches. Section
+\ref{sec:evaluation} presents the evaluation of our implementations which
+includes benchmark setups and their results. Subsequently, in Section
+\ref{sec:discussion} we interpret our experiment results and discuss their
+impact on the future development of serverless platforms. Finally, we conclude
+our report in Section \ref{sec:conclusion} by summarizing its main contributions
+and present future research directions.
 
