added future work

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -145,3 +145,24 @@ keywords = {measurement, systems, cloud, serverless, FaaS},
 location = {, Koblenz, Germany, },
 series = {SOSP '23}
 }
+
+@article{wiesner2023sil,
+    author = {Wiesner, Philipp and Steinke, Marvin and Nickel, Henrik and Kitana, Yazan and Kao, Odej},
+    title = {Software-in-the-loop simulation for developing and testing carbon-aware applications},
+    journal = {Software: Practice and Experience},
+    year = {2023},
+    volume = {53},
+    number = {12},
+    pages = {2362-2376},
+    doi = {https://doi.org/10.1002/spe.3275}
+}
+
+@inproceedings{amaral2023kepler,
+  title={Kepler: A framework to calculate the energy consumption of containerized applications},
+  author={Amaral, Marcelo and Chen, Huamin and Chiba, Tatsuhiro and Nakazawa, Rina and Choochotkaew, Sunyanan and Lee, Eun Kyung and Eilam, Tamar},
+  booktitle={2023 IEEE 16th International Conference on Cloud Computing (CLOUD)},
+  pages={69--71},
+  year={2023},
+  organization={IEEE}
+}
+
